--- a/Async Test/Async Test/Async Test.csproj
+++ b/Async Test/Async Test/Async Test.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OwainTest.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Async.cs" />
+    <Compile Include="AdvancedAsync.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebsiteDataModel.cs" />
   </ItemGroup>
